@@ -1,7 +1,6 @@
 package com.stevekung.fishofthieves.entity;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jspecify.annotations.Nullable;
@@ -106,7 +105,7 @@ public abstract class AbstractSchoolingThievesFish<T extends AbstractFishVariant
     private final ResourceKey<T> resourceKey;
     private final DataComponentType<Holder<T>> dataComponentType;
 
-    public AbstractSchoolingThievesFish(EntityType<? extends AbstractSchoolingFish> entityType, Level level, ResourceKey<? extends Registry<T>> registryKey, ResourceKey<T> resourceKey, DataComponentType<Holder<T>> dataComponentType)
+    protected AbstractSchoolingThievesFish(EntityType<? extends AbstractSchoolingFish> entityType, Level level, ResourceKey<? extends Registry<T>> registryKey, ResourceKey<T> resourceKey, DataComponentType<Holder<T>> dataComponentType)
     {
         super(entityType, level);
         this.refreshDimensions();
@@ -189,12 +188,9 @@ public abstract class AbstractSchoolingThievesFish<T extends AbstractFishVariant
     @Override
     public void remove(Entity.RemovalReason reason)
     {
-        if (!this.level().isClientSide() && this.isDeadOrDying())
+        if (!this.level().isClientSide() && this.isDeadOrDying() && this.isFollower())
         {
-            if (this.isFollower())
-            {
-                this.getLeader().removeFollower();
-            }
+            this.getLeader().removeFollower();
         }
         super.remove(reason);
     }
@@ -247,7 +243,7 @@ public abstract class AbstractSchoolingThievesFish<T extends AbstractFishVariant
     @Override
     public void addThievesFishFollowers(Stream<AbstractFlockFish> followers)
     {
-        var list = followers.limit(this.getMaxSchoolSize() - this.getSchoolSize()).filter(fish -> fish != this).collect(Collectors.toList());
+        var list = followers.limit((long) this.getMaxSchoolSize() - this.getSchoolSize()).filter(fish -> fish != this).toList();
         var hasFlockFollowerMem = this.getBrain().hasMemoryValue(FOTMemoryModuleTypes.FLOCK_FOLLOWERS);
 
         list.forEach(fish ->
